- [x] Email Verification issue fixed - [x] z-index of hints increased

--- a/resources/assets/app.scss
+++ b/resources/assets/app.scss
@@ -5109,7 +5109,7 @@ body > .skiptranslate iframe {
 }
 
 .introjs-fixedhint {
-  z-index: 100;
+  z-index: 100000000;
 }
 
 .introjs-button {
